--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.8.3",
+    "mqtt": "^5.14.1",
     "nodemon": "^3.1.7"
   },
   "name": "homefarm",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build":"npm install",
+    "build": "npm install",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
