--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@influxdata/influxdb-client": "^1.35.0",
     "bcryptjs": "^3.0.2",
     "bootstrap-icons": "^1.11.3",
     "cookie-parser": "^1.4.7",
